uniform file-naming via TVDB

--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "dotenv": "^4.0.0",
     "feedparser": "^2.2.1",
+    "fuzzyset.js": "^0.0.4",
     "humanize-plus": "^1.8.2",
     "minimist": "^1.2.0",
+    "node-tvdb": "^3.2.0",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.4",
     "sanitize-filename": "^1.6.1",
+    "shell-escape": "^0.2.0",
     "ssl-root-cas": "^1.2.3"
   }
 }
